squished some bugs in job work flow
changed some stuff in the way job from a different user is copied over.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -43,3 +43,6 @@ input[type="text"].input-xpath, #jobs_params_preview {
 article {
   font-family: 'Muli', 'Helvetica Neue', Helvetics, arial, sans-serif;
 }
+.hidden-fields {
+  display: none;
+}
